--- a/_config.yml
+++ b/_config.yml
@@ -79,13 +79,13 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Fasih Ahsan"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
-  employer         :
+  bio              : "Staff Research Associate II, Department of Pathology and Laboratory Medicine"
+  location         : "University of California, Los Angeles"
+  employer         : "Teitell Laboratory"
   googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
+  email            : "FAhsan@mednet.ucla.edu"
   uri              :
   bitbucket        :
   codepen          :
@@ -93,7 +93,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "fahsan"
   google_plus      :
   keybase          :
   instagram        :
@@ -105,7 +105,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : "fahsan"
   vine             :
   weibo            :
   xing             :
