--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 # Site Author
 author:
   name             : "Fasih Ahsan"
-  avatar           : "fahsan.png"
+  avatar           : "fahsan.jpg"
   bio              : "Staff Research Associate II, Department of Pathology and Laboratory Medicine"
   location         : "University of California, Los Angeles"
   employer         : "Teitell Laboratory"
