--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ author:
   name             : "Fasih Ahsan"
   avatar           : "fahsan.jpg"
   bio              : "Staff Research Associate II, Department of Pathology and Laboratory Medicine"
-  location         : "University of California, Los Angeles, David Geffen School of Medicine"
+  location         : "University of California, Los Angeles<br /> David Geffen School of Medicine"
   employer         : "Teitell Laboratory
   <address>
   675 Charles E. Young Drive South<br /> 4-567 MRL Building<br /> Los Angeles, CA 90095-1732<br /> United States
