--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 author:
   name             : "Fasih Ahsan"
   avatar           : "fahsan.jpg"
-  bio              : "Staff Research Associate II, Department of Pathology and Laboratory Medicine"
+  bio              : "Staff Research Associate II<br /> Department of Pathology and Laboratory Medicine"
   location         : "University of California, Los Angeles<br /> David Geffen School of Medicine"
   employer         : "Teitell Laboratory
   <address>
