--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ author:
   name             : "Fasih Ahsan"
   avatar           : "fahsan.jpg"
   bio              : "Graduate Student Researcher<br /> Center for Genomic Medicine"
-  location         : "Massachusetts General Hospital Research Institute"
-  employer         : "Soukas Laboratory"
+  location         : "Massachusetts General Hospital<br /> Research Institute"
+  employer         : "Soukas Laboratory
   <address>
   185 Cambridge Street<br /> CPZN 6500<br /> Boston, MA 02114<br /> United States
 </address>"
